tests/baselines/reference/decoratorOnImportEquals1.errors.txt
tests/cases/conformance/decorators/invalid/decoratorOnImportEquals1.ts(8,5): error TS1202: Decorators are not valid on this declaration type.


==== tests/cases/conformance/decorators/invalid/decoratorOnImportEquals1.ts (1 errors) ====
    declare function dec<T>(target: T): T;
    
    module M1 {
        export var X: number;
    }
    
    module M2 {
        @dec
        ~~~~
        import X = M1.X;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS1202: Decorators are not valid on this declaration type.
    }